# aionforge-memory

./: .dockerignore  .gitignore  AGENTS.md  Benchmarks.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.release  NOTICE  README.md  SECURITY.md  THIRDPARTY.md  about.toml  deny.toml
crates/aionforge/: Cargo.toml
crates/aionforge-auth/: Cargo.toml
crates/aionforge-auth/src/: discovery.rs  error.rs  fetch.rs  jwks.rs  lib.rs  validate.rs  validator.rs
crates/aionforge-auth/tests/: validation.rs
crates/aionforge-capture/: Cargo.toml
crates/aionforge-capture/src/: capturer.rs  config.rs  error.rs  lib.rs  receipt.rs  request.rs
crates/aionforge-capture/tests/: capture.rs  residue.rs  signing_gate.rs  supersedes.rs
crates/aionforge-chat/: Cargo.toml
crates/aionforge-cli/: Cargo.toml
crates/aionforge-cli/src/: cli.rs  console.rs  consolidation_config.rs  doctor.rs  error.rs  health.rs  host.rs  main.rs  observability.rs  recover.rs  serve.rs
crates/aionforge-cli/tests/: serve_smoke.rs
crates/aionforge-config/: Cargo.toml
crates/aionforge-config/src/: auth.rs  config.rs  consolidation.rs  deployment.rs  drift.rs  error.rs  guard.rs  lib.rs  load.rs  server.rs
crates/aionforge-config/tests/: config.rs  deployment.rs
crates/aionforge-consolidate/: Cargo.toml
crates/aionforge-consolidate/src/: audit.rs  config.rs  detect.rs  distill.rs  fact_extraction.rs  lag.rs  lib.rs  link_evolution.rs  llm_link_evolver.rs  llm_summarizer.rs  pass.rs  profile.rs  prompt.rs  resolve.rs  rule_extractor.rs  rule_inducer.rs  rule_link_evolver.rs  rule_summarizer.rs  scheduler.rs  skill_induction.rs  summarize.rs
crates/aionforge-consolidate/tests/: convergence.rs  cross_family_guard.rs  detection.rs  distill.rs  extraction.rs  link_evolution.rs  scheduler.rs  skill_induction.rs  summarization.rs
crates/aionforge-domain/: Cargo.toml
crates/aionforge-domain/src/: authz.rs  contracts.rs  decay.rs  drift.rs  edges.rs  error.rs  gate.rs  ids.rs  lib.rs  recall_frame.rs  signing.rs  time.rs  trust.rs  verify.rs
crates/aionforge-domain/tests/: authz.rs  round_trip.rs  vocabulary.rs
crates/aionforge-embed/: Cargo.toml
crates/aionforge-embed/src/: client.rs  error.rs  lib.rs  wire.rs
crates/aionforge-embed/tests/: embed.rs
crates/aionforge-engine/: Cargo.toml
crates/aionforge-engine/src/: audit.rs  census.rs  doctor.rs  drift_sweep.rs  erase.rs  forget_sweep.rs  guard.rs  lib.rs  lineage.rs  pin.rs  reliability_sweep.rs  telemetry.rs
crates/aionforge-engine/tests/: audit_read.rs  audit_signing.rs  consolidation.rs  consolidation_config_wiring.rs  core_block_acceptance.rs  cross_family_probe.rs  drift_sweep.rs  erase_acceptance.rs  forget_acceptance.rs  forget_sweep.rs  pin_acceptance.rs  promotion.rs  reliability.rs  reliability_sweep.rs  reliability_sweep_e2e.rs  signed_writes.rs  smoke.rs
crates/aionforge-eval/: Cargo.toml
crates/aionforge-eval/fixtures/: PROVENANCE.md  corpus_memories.jsonl  corpus_queries.jsonl
crates/aionforge-eval/src/: beam.rs  fixture.rs  ingest_adapter.rs  lib.rs  longmemeval.rs  metrics.rs  report.rs  scrub.rs
crates/aionforge-eval/tests/: beam_floor_recall.rs  beam_ingest_adapter_smoke.rs  beam_multihop_floor.rs  beam_seed_sweep.rs  beam_temporal_floor.rs  embedder_compare.rs  floor_sweep.rs  graph_bearing_bench.rs  longmemeval_scorer.rs
crates/aionforge-eval/tools/: README.md  prepare_beam.py
crates/aionforge-forget/: Cargo.toml
crates/aionforge-forget/src/: audit_addr.rs  baseline.rs  cooling.rs  detector.rs  eraser.rs  forgetter.rs  lib.rs  pinning.rs  policy.rs
crates/aionforge-forget/tests/: cooling.rs  drift_detector.rs  eraser.rs  forgetter.rs  pinning.rs
crates/aionforge-mcp/: Cargo.toml  build.rs
crates/aionforge-mcp/src/: auth_validator.rs  census.rs  http_body_limit.rs  http_transport.rs  inspect.rs  lib.rs  lifecycle.rs  lifecycle_output.rs  mapper.rs  principal.rs  prompt.rs  render.rs  resources.rs  status.rs  structured.rs  surface.rs  telemetry.rs  tools.rs  traffic.rs  validated.rs  work.rs
crates/aionforge-mcp/tests/: audit_history.rs  auth_e2e_transport.rs  auth_validator.rs  batch_capture.rs  consolidation_background_managed.rs  consolidation_min_confidence.rs  http_transport.rs  lifecycle.rs  lifecycle_write_guard.rs  mapper.rs  mcp.rs  mcp_recall_escaping.rs  memory_census.rs  memory_census_review.rs  pin_unpin.rs  principal_manifest.rs  read_memory.rs  read_memory_multikind.rs  resources.rs  search_recall_fanout.rs  structured_content.rs  telemetry.rs  token_budget.rs  work_tools.rs
crates/aionforge-procedural/: Cargo.toml
crates/aionforge-procedural/src/: clock.rs  config.rs  error.rs  lib.rs  memory.rs  ranking.rs
crates/aionforge-procedural/tests/: bad_patterns.rs  skills.rs
crates/aionforge-redteam/: Cargo.toml
crates/aionforge-redteam/src/: lib.rs
crates/aionforge-redteam/tests/: m6t04.rs  m6t05.rs  m6t06.rs
crates/aionforge-retrieval/: Cargo.toml
crates/aionforge-retrieval/src/: bundle.rs  fusion.rs  lib.rs  precision.rs  query.rs  rerank.rs  retriever.rs  router.rs  selection.rs  signals.rs  temporal.rs  trace.rs
crates/aionforge-retrieval/tests/: bitemporal.rs  community_diversity.rs  conditioning.rs  cooling_rerank.rs  core_block_recall.rs  decay_rerank.rs  forget_gate.rs  fusion.rs  graph_expansion.rs  lexical_anchor.rs  min_relevance_floor.rs  multihop_entity_floor_probe.rs  precision.rs  project_corpus.rs  recall.rs  recall_render.rs  recall_superseded.rs  router.rs  signals.rs  support_expansion.rs  system_role_reveal.rs  trust_rerank.rs
crates/aionforge-security/: Cargo.toml
crates/aionforge-security/src/: cross_family.rs  filter.rs  lib.rs
crates/aionforge-security/tests/: cross_family.rs  filter.rs  injection_corpus.rs
crates/aionforge-store/: Cargo.toml
crates/aionforge-store/src/: agent.rs  attestation.rs  audit.rs  audit_read.rs  bad_pattern.rs  capture_write.rs  catalog.rs  census.rs  compact.rs  config.rs  consolidation.rs  convert.rs  cooling.rs  core_block.rs  dedup.rs  (+35 more)
crates/aionforge-trust/: Cargo.toml
crates/aionforge-tui/: Cargo.toml
(+232 files in other folders)
