# aionforge-memory workspace root.
#
# Multi-crate, no umbrella facade. The dependency direction is intentional and
# acyclic (L1 domain -> L0 store -> L2 subsystems -> L3 engine -> L4 surfaces ->
# bin). Only `aionforge-store` (L0) may name selene-db types; every other crate
# works through the store's typed surface. See _goalslogs/design/01-architecture.md.

[workspace]
resolver = "3"
members = [
    "crates/aionforge-domain",       # L1 — memory-kind types + contract traits (no I/O)
    "crates/aionforge-store",        # L0 — selene-db SharedGraph + persistence (only crate naming selene-db)
    "crates/aionforge-embed",        # L2 — OpenAI-compatible embedding/chat/rerank client
    "crates/aionforge-capture",      # L2 — fast capture path
    "crates/aionforge-retrieval",    # L2 — hybrid retrieval + fusion + router + recall bundle
    "crates/aionforge-consolidate",  # L2 — asynchronous consolidation
    "crates/aionforge-procedural",   # L2 — skills-as-data + bad patterns
    "crates/aionforge-trust",        # L2 — namespaces, CRDT merge, provenance, trust, audit
    "crates/aionforge-forget",       # L2 — decay, forgetting, erasure, identity/drift
    "crates/aionforge-security",     # L2 — privacy/injection filter, untrusted tagging, cross-family guard
    "crates/aionforge-engine",       # L3 — façade: composes subsystems, lifecycle, cross-cutting policy
    "crates/aionforge",              # L4 — public Rust library API
    "crates/aionforge-mcp",          # L4 — optional MCP server surface
    "crates/aionforge-tui",          # L4 — optional read-only ratatui operator TUI
    "crates/aionforge-cli",          # bin — the `aionforge` single binary
]
exclude = ["_spec", "_goalslogs"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
authors = ["Justin Scott"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Aionforge-Labs/aionforge-memory"
homepage = "https://github.com/Aionforge-Labs/aionforge-memory"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
todo = "deny"
dbg_macro = "deny"
# print_stdout/print_stderr stay at WARN (not deny): the MCP stdio transport and
# the TUI legitimately write to stdout/terminal. Route output through the
# transport writer / ratatui backend, never raw println!, to keep warnings at zero.
print_stderr = "warn"
print_stdout = "warn"

[workspace.dependencies]
# --- Shared with the selene-db substrate: pinned to selene-db's EXACT versions. ---
# selene-db denies multiple-versions and Aionforge consumes it as a path dep, so
# the shared transitive tree must agree. Verified against selene-db/Cargo.toml.
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
thiserror = "2.0"
miette = { version = "7.6", features = ["derive"] }
jiff = { version = "0.2", features = ["serde"] }
uuid = { version = "1.23", features = ["v4", "v7", "serde"] }
blake3 = "1.8"
tracing = "0.1"
metrics = "0.24"

# --- New top-level pins (selene-db has none of these). ---
ulid = "1.2"

# --- Test / dev dependencies (versions match selene-db). ---
proptest = { version = "1.11", default-features = false, features = ["std"] }
insta = "1.47"
rstest = "0.26"

# --- selene-db substrate (private repo; git dep tracking the `development` branch). ---
# selene-db is private and under active development, so we track its `development`
# branch over SSH (not a path dep into the other agent's working tree). The source is
# the branch, but Cargo.lock pins the exact commit — builds stay reproducible and CI
# runs `--locked`. `cargo update` pulls newer `development` commits on demand, and the
# nightly workflow runs that update on a schedule so we never silently fall behind.
# `cargo build` fetches with the system git binary + your SSH key (.cargo/config.toml).
# For tight co-development against a local checkout, use the commented `[patch]` below.
selene-core = { git = "ssh://git@github.com/jscott3201/selene-db.git", branch = "development" }
selene-graph = { git = "ssh://git@github.com/jscott3201/selene-db.git", branch = "development" }
selene-persist = { git = "ssh://git@github.com/jscott3201/selene-db.git", branch = "development" }
selene-gql = { git = "ssh://git@github.com/jscott3201/selene-db.git", branch = "development" }
selene-algorithms = { git = "ssh://git@github.com/jscott3201/selene-db.git", branch = "development" }

# Co-development escape hatch: to build against a local selene-db checkout instead of
# the fetched branch, uncomment and point these at your sibling checkout. Do not
# commit the uncommented form.
# [patch."ssh://git@github.com/jscott3201/selene-db.git"]
# selene-core = { path = "../selene-db/crates/selene-core" }
# selene-graph = { path = "../selene-db/crates/selene-graph" }
# selene-persist = { path = "../selene-db/crates/selene-persist" }
# selene-gql = { path = "../selene-db/crates/selene-gql" }
# selene-algorithms = { path = "../selene-db/crates/selene-algorithms" }

# Heavier frameworks (tokio, reqwest, rustls, rmcp, axum, ed25519-dalek, ratatui,
# clap, figment, secrecy, tracing-subscriber, dev-deps) are added to this floor at
# the task that first introduces them (M0.T03/T07/T08 and M1+), per the M0 plan,
# to keep the skeleton dep tree minimal.

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[profile.dev]
debug = "line-tables-only"
incremental = true
