# aionforge-memory workspace root.
#
# Multi-crate, no umbrella facade. The dependency direction is intentional and
# acyclic (L1 domain -> L0 store -> L2 subsystems -> L3 engine -> L4 surfaces ->
# bin). Only `aionforge-store` (L0) may name selene-db types; every other crate
# works through the store's typed surface. See _goalslogs/design/01-architecture.md.

[workspace]
resolver = "3"
members = [
    "crates/aionforge-domain",       # L1 — memory-kind types + contract traits (no I/O)
    "crates/aionforge-store",        # L0 — selene-db SharedGraph + persistence (only crate naming selene-db)
    "crates/aionforge-config",       # layered configuration (file + env + flags); produces StoreConfig
    "crates/aionforge-auth",         # L2 — OIDC/JWKS discovery + RS256-pinned JWT validator (PR2, fork#3)
    "crates/aionforge-embed",        # L2 — OpenAI-compatible embedding/rerank client
    "crates/aionforge-capture",      # L2 — fast capture path
    "crates/aionforge-retrieval",    # L2 — hybrid retrieval + fusion + router + recall bundle
    "crates/aionforge-consolidate",  # L2 — asynchronous consolidation
    "crates/aionforge-procedural",   # L2 — skills-as-data + bad patterns
    "crates/aionforge-trust",        # L2 — namespaces, CRDT merge, provenance, trust, audit
    "crates/aionforge-forget",       # L2 — decay, forgetting, erasure, identity/drift
    "crates/aionforge-security",     # L2 — privacy/injection filter, untrusted tagging, cross-family guard
    "crates/aionforge-redteam",      # security acceptance probes + structured reports
    "crates/aionforge-engine",       # L3 — façade: composes subsystems, lifecycle, cross-cutting policy
    "crates/aionforge",              # L4 — public Rust library API
    "crates/aionforge-mcp",          # L4 — optional MCP server surface
    "crates/aionforge-tui",          # L4 — optional read-only ratatui operator TUI
    "crates/aionforge-cli",          # bin — the `aionforge` single binary
]
exclude = ["_spec", "_goalslogs"]

[workspace.package]
version = "0.2.1"
edition = "2024"
rust-version = "1.95.0"
authors = ["Justin Scott"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jscott3201/aionforge-memory"
homepage = "https://github.com/jscott3201/aionforge-memory"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
todo = "deny"
dbg_macro = "deny"
# print_stdout/print_stderr stay at WARN (not deny): the MCP stdio transport and
# the TUI legitimately write to stdout/terminal. Route output through the
# transport writer / ratatui backend, never raw println!, to keep warnings at zero.
print_stderr = "warn"
print_stdout = "warn"

[workspace.dependencies]
# --- Shared with the selene-db substrate: pinned to selene-db's EXACT versions. ---
# selene-db denies multiple-versions and Aionforge consumes it as a path dep, so
# the shared transitive tree must agree. Verified against selene-db/Cargo.toml.
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
thiserror = "2.0"
miette = { version = "7.6", features = ["derive"] }
jiff = { version = "0.2", features = ["serde"] }
uuid = { version = "1.23", features = ["v4", "v7", "serde"] }
blake3 = "1.8"
tracing = "0.1"
metrics = "0.24"

# --- New top-level pins (selene-db has none of these). ---
# Layered configuration (file + environment + flags) with documented precedence, and
# secret values that redact in logs and zeroize on drop. Introduced at M0.T07.
figment = { version = "0.10", features = ["toml", "env"] }
secrecy = "0.10"
# OpenAI-compatible HTTP client, rustls per §8.4 (no native-tls). Introduced at
# M0.T08; bumped 0.12 -> 0.13 in M1. 0.13 splits TLS into feature flags: we take
# `rustls-no-provider` and supply our own ring crypto provider (below) so the
# aws-lc-sys C/cmake build never enters the tree.
reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider", "json"] }
# The ring crypto provider for reqwest's rustls-no-provider — ring only, never the
# aws-lc-rs default. aionforge-embed installs it as the process default before it
# builds a client (rustls-no-provider panics on a client built with no provider).
rustls = { version = "0.23", default-features = false, features = ["ring"] }
# JWT validation (RS256-pinned, ring-backed, constant-time). Spike 2026-06-13 chose v9 over v10:
# v10 dropped ring, forcing either aws-lc-rs (cmake/Go, breaks musl) or rust_crypto (carries
# RUSTSEC-2023-0071 Marvin advisory + rand duplicate); v9 reuses ring v0.17.14 (already in-tree
# via rustls), pulls 11 new crates (time, simple_asn1, num-bigint), passes cargo deny clean with
# ZERO carve-outs. Quarantined in aionforge-auth; resource server only does public-key verify
# (never private ops), and jsonwebtoken types never leak into that crate's public API (fork#3).
jsonwebtoken = { version = "9.3" }
# Capture-side privacy/injection filter patterns (M1.T02). Already in the tree
# transitively via selene-db, so this direct pin reuses that exact locked version.
regex = "1"
# Ed25519 signing seams (M4.T03 write provenance, 06 §3; M4.T06 audit signing, 06 §6).
# The WRITER channel verifies only — a host's private key never enters the substrate.
# The AUDIT channel is the one author carve-out: the substrate signs the audit events it
# emits itself, with a key minted in exactly one place (`AuditSigner::mint`). The
# `rand_core` feature that makes keygen reachable is enabled on the trust crate's
# dependency line only, and because feature unification compiles that code wherever
# dalek is linked, the call-level guarantee is held by
# .github/scripts/check-audit-keygen-confined.sh. base64 decodes the stored key/signature.
ed25519-dalek = { version = "2.1" }
base64 = "0.22"
# OS CSPRNG handle for the audit-key mint — the workspace's only direct RNG-API
# caller, confined to audit_signer.rs (CI-gated; indirect entropy such as uuid's v7
# id minting is separate and out of the gate's scope). The 0.6 line is the one
# ed25519-dalek 2.1 links, so this adds no second rand_core version to the tree.
rand_core = { version = "0.6.4", features = ["getrandom"] }
# Wipes the audit-signing seed on drop. Already in the tree via ed25519-dalek's
# default `zeroize` feature; this direct pin adds no new version.
zeroize = "1.8"
# CLI argument parsing for the single `aionforge` binary. Introduced at M8.T03 with
# the doctor command; derive keeps the subcommand surface declarative and testable.
clap = { version = "4.6.1", features = ["derive"] }

# --- Test / dev dependencies (versions match selene-db). ---
proptest = { version = "1.11", default-features = false, features = ["std"] }
insta = "1.47"
rstest = "0.26"
# Async runtime for tests and a mock HTTP server for the embedding client (M0.T08).
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
# Object-safe async traits for the consolidation pass seam (M2.T03).
async-trait = "0.1"

# --- selene-db substrate (published crates.io release, pinned to 1.2.0). ---
# selene-db 1.2 is published to crates.io under renamed packages (selene-db-core,
# -graph, -persist, -gql, -algorithms). We consume them through stable local alias
# keys (selene-core, ...) via Cargo's `package =` rename, so every `use selene_core`
# in aionforge-store and the store-only-selene gate's pattern stay unchanged above L0.
# The `1.2.0` requirement pins the released line; Cargo.lock locks the exact build and
# CI runs `--locked`. `cargo update` moves within 1.2.x. selene-db denies
# multiple-versions, so the shared transitive tree must agree (see the pins above).
# For tight co-development against a local checkout, use the commented `[patch]` below.
selene-core = { package = "selene-db-core", version = "1.2.0" }
selene-graph = { package = "selene-db-graph", version = "1.2.0" }
selene-persist = { package = "selene-db-persist", version = "1.2.0" }
selene-gql = { package = "selene-db-gql", version = "1.2.0" }
selene-algorithms = { package = "selene-db-algorithms", version = "1.2.0" }

# Co-development escape hatch: to build against a local selene-db checkout instead of
# the published release, uncomment and point these at your sibling checkout. Patch by
# the published package name (the crates.io source), not our alias key. Do not commit
# the uncommented form.
# [patch.crates-io]
# selene-db-core = { path = "../selene-db/crates/selene-core" }
# selene-db-graph = { path = "../selene-db/crates/selene-graph" }
# selene-db-persist = { path = "../selene-db/crates/selene-persist" }
# selene-db-gql = { path = "../selene-db/crates/selene-gql" }
# selene-db-algorithms = { path = "../selene-db/crates/selene-algorithms" }

# Heavier frameworks (tokio, reqwest, rustls, rmcp, axum, ed25519-dalek, ratatui,
# clap, tracing-subscriber, dev-deps) are added to this floor at the task that first
# introduces them (M0.T08 and M1+), per the M0 plan, to keep the skeleton dep tree
# minimal.

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[profile.dev]
debug = "line-tables-only"
incremental = true
