[package]
name = "aionforge-capture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Fast ADD-oriented capture path: deduplication, provenance, single-funnel commit."

[dependencies]
aionforge-domain = { path = "../aionforge-domain", version = "0.2.2" }
aionforge-store = { path = "../aionforge-store", version = "0.2.2" }
metrics = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
miette = { workspace = true }

[dev-dependencies]
aionforge-domain = { path = "../aionforge-domain", version = "0.2.2" }
aionforge-store = { path = "../aionforge-store", version = "0.2.2" }
aionforge-security = { path = "../aionforge-security", version = "0.2.2" }
tokio = { workspace = true }

[lints]
workspace = true
