[package]
name = "aionforge-chat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Multi-provider chat-completion client (OpenAI Chat Completions, OpenAI Responses, Anthropic Messages) behind one provider-agnostic Completer seam."

[dependencies]
aionforge-domain = { path = "../aionforge-domain", version = "0.2.0" }
aionforge-config = { path = "../aionforge-config", version = "0.2.0" }
reqwest = { workspace = true }
rustls = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }

[dev-dependencies]
secrecy = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
