[package]
name = "aionforge-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "The aionforge single binary: serve, doctor, and recover subcommands."

[[bin]]
name = "aionforge"
path = "src/main.rs"

[dependencies]
aionforge = { path = "../aionforge", version = "0.3.0" }
aionforge-config = { path = "../aionforge-config", version = "0.3.0" }
aionforge-embed = { path = "../aionforge-embed", version = "0.3.0" }
aionforge-mcp = { path = "../aionforge-mcp", version = "0.3.0" }
aionforge-store = { path = "../aionforge-store", version = "0.3.0" }
aionforge-tui = { path = "../aionforge-tui", version = "0.3.0" }
axum = { version = "0.8.9", default-features = false, features = ["tokio", "http1", "http2"] }
bytes = "1"
clap = { workspace = true }
http-body-util = "0.1"
secrecy = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["net", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = "2"

[dev-dependencies]
wiremock = { workspace = true }

[lints]
workspace = true
