[package]
name = "aionforge-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Layered configuration (file + environment + flags) for Aionforge Memory, with documented precedence and secrets that never log."

[dependencies]
aionforge-domain = { path = "../aionforge-domain", version = "0.3.0" }
aionforge-store = { path = "../aionforge-store", version = "0.3.0" }
serde = { workspace = true }
figment = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }

[dev-dependencies]
figment = { workspace = true, features = ["test"] }
serde_json = { workspace = true }

[lints]
workspace = true
