[package]
name = "aionforge-consolidate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Asynchronous consolidation: a durable cursor and a bounded background scheduler over the commit stream."

[dependencies]
aionforge-domain = { path = "../aionforge-domain", version = "0.1.0" }
aionforge-security = { path = "../aionforge-security", version = "0.1.0" }
aionforge-store = { path = "../aionforge-store", version = "0.1.0" }
async-trait = { workspace = true }
metrics = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "sync"] }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
