[package]
name = "aionforge-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Memory-kind domain types and subsystem contract traits for Aionforge Memory (type-only, no I/O)."

[dependencies]
serde.workspace = true
serde_json.workspace = true
jiff.workspace = true
thiserror.workspace = true
blake3.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
serde.workspace = true
serde_json.workspace = true
jiff.workspace = true
uuid.workspace = true

[lints]
workspace = true
