[package]
name = "aionforge-embed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "OpenAI-compatible embedding/chat/rerank client with order-preserving batching and write-path normalization."

[dependencies]
aionforge-domain = { path = "../aionforge-domain", version = "0.2.2" }
aionforge-config = { path = "../aionforge-config", version = "0.2.2" }
reqwest = { workspace = true }
rustls = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }

[dev-dependencies]
aionforge-domain = { path = "../aionforge-domain", version = "0.2.2" }
secrecy = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
