[package]
name = "aionforge-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "The Aionforge Memory facade: composes the subsystems, owns lifecycle, and enforces cross-cutting policy."

[dependencies]
aionforge-domain = { path = "../aionforge-domain", version = "0.1.0" }
aionforge-store = { path = "../aionforge-store", version = "0.1.0" }
aionforge-embed = { path = "../aionforge-embed", version = "0.1.0" }
aionforge-capture = { path = "../aionforge-capture", version = "0.1.0" }
aionforge-retrieval = { path = "../aionforge-retrieval", version = "0.1.0" }
aionforge-consolidate = { path = "../aionforge-consolidate", version = "0.1.0" }
aionforge-procedural = { path = "../aionforge-procedural", version = "0.1.0" }
aionforge-trust = { path = "../aionforge-trust", version = "0.1.0" }
aionforge-forget = { path = "../aionforge-forget", version = "0.1.0" }
aionforge-security = { path = "../aionforge-security", version = "0.1.0" }
thiserror = { workspace = true }
# The audit-signing seed crosses the engine as a host-resolved SecretString (the engine
# never reads the environment itself); same redaction/zeroize posture as the config crate.
secrecy = { workspace = true }
miette = { workspace = true }

[dev-dependencies]
aionforge-domain = { path = "../aionforge-domain", version = "0.1.0" }
aionforge-store = { path = "../aionforge-store", version = "0.1.0" }
tokio = { workspace = true }
# Test-only: sign provenance payloads with a fixed-seed keypair to exercise the signed-write
# gate end to end (M4.T03). Already pinned at the workspace; no new versions enter the tree.
ed25519-dalek = { workspace = true }
# Test-only: build audit payloads and read them back in the facade tests (M4.T06). Already
# pinned at the workspace.
serde_json = { workspace = true }
base64 = { workspace = true }

[lints]
workspace = true
