[package]
name = "aionforge-eval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Retrieval-quality eval harness for Aionforge Memory: off-topic-rejection floor sweeps and graded-relevance metrics. A leaf crate — no core crate depends on it, so it is excluded from the shipped binary."

[dependencies]
# Lightweight, always-compiled lib surface: metrics over the public RecallBundle, the
# fixture loader, and the scrub gate. No network, no store.
aionforge-domain = { path = "../aionforge-domain", version = "0.2.2" }
aionforge-retrieval = { path = "../aionforge-retrieval", version = "0.2.2" }
# The public ingest adapter seeds stores and can drain the deterministic consolidation
# pipeline. This crate is still a leaf eval harness; nothing in the shipped binary
# depends on it.
aionforge-store = { path = "../aionforge-store", version = "0.2.2" }
aionforge-consolidate = { path = "../aionforge-consolidate", version = "0.2.2" }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
# Heavy, on-demand-only: the real network embedder and the async runtime are used solely
# by the #[ignore] floor-sweep/smoke runners. Nothing depends on this crate, so even
# these never reach the shipped binary.
aionforge-embed = { path = "../aionforge-embed", version = "0.2.2" }
secrecy = { workspace = true }
tokio = { workspace = true }
# The seed-once/sweep-via-search runner (tests/beam_seed_sweep.rs) drives a LIVE MCP
# container over Streamable HTTP, so it needs an HTTP client. The traffic is loopback
# http:// only, but the workspace pins reqwest to `rustls-no-provider`, which panics at
# Client build unless the ring crypto provider is installed first — hence rustls too,
# mirroring aionforge-embed::client.
reqwest = { workspace = true }
rustls = { workspace = true }

[lints]
workspace = true
