[package]
name = "aionforge-forget"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Decay and importance, active forgetting, erasure cascade, attested core memory, and drift detection."

[dependencies]
aionforge-domain = { path = "../aionforge-domain", version = "0.2.0" }
aionforge-store = { path = "../aionforge-store", version = "0.2.0" }
aionforge-embed = { path = "../aionforge-embed", version = "0.2.0" }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
