[package]
name = "aionforge-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Optional Model Context Protocol server surface (Tools, Resources, Prompts) for Aionforge Memory."

[dependencies]
aionforge-engine = { path = "../aionforge-engine", version = "0.1.0" }
aionforge-domain = { path = "../aionforge-domain", version = "0.1.0" }
bytes = "1"
http = "1"
http-body = "1"
http-body-util = "0.1"
rmcp = { version = "1.6", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
schemars = "1"
serde = { workspace = true }
serde_json = { workspace = true }
metrics = { workspace = true }
tracing = { workspace = true }
jiff = { workspace = true }
tokio = { workspace = true }
tower-service = "0.3"

[dev-dependencies]
aionforge-domain = { path = "../aionforge-domain", version = "0.1.0" }
aionforge-engine = { path = "../aionforge-engine", version = "0.1.0" }
aionforge-store = { path = "../aionforge-store", version = "0.1.0" }
rmcp = { version = "1.6", features = ["client"] }
tokio = { workspace = true }

[lints]
workspace = true
